base/ingress.yaml
# Ingress được sử dụng để quản lý việc truy cập từ bên ngoài vào các dịch vụ bên trong cluster Kubernetes thông qua HTTP/HTTPS.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "static-public-ip" # Annotation này dùng để gắn một địa chỉ IP tĩnh (Global Static IP) đã được cấu hình trong Google Cloud (hoặc các môi trường tương tự) cho Ingress. Địa chỉ IP này sẽ được sử dụng làm điểm truy cập từ bên ngoài vào cluster.
spec: # cấu hình chi tiết
  defaultBackend: # Nếu không có rule nào khớp (xem phần rules bên dưới), lưu lượng sẽ được chuyển đến Service frontend-service
    service:
      name: frontend-service
      port:
        number: 80 # Chỉ định cổng mà frontend-service lắng nghe
  rules: # Định nghĩa các quy tắc định tuyến dựa trên đường dẫn URL (path)
  - http: # Các quy tắc áp dụng cho giao thức HTTP.
      paths:
      - path: /apis/* # Lưu lượng với đường dẫn bắt đầu bằng /apis/ sẽ được chuyển đến một backend cụ thể.
        pathType: ImplementationSpecific # Kubernetes sẽ tự quyết định cách khớp đường dẫn /apis/*. Các giá trị khác có thể là Prefix (khớp tiền tố) hoặc Exact (khớp chính xác).
        backend:
          service:
            name: backend-service # Lưu lượng phù hợp với quy tắc này sẽ được chuyển đến Service backend-service.
            port:
              number: 80 # Chỉ định cổng mà backend-service lắng nghe
